# 0x0bot

./: .editorconfig  .env.example  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
migrations/2019-10-17-173102_message_logs/: down.sql  up.sql
src/: event_handler.rs  main.rs
src/db/: mod.rs  pool.rs  schema.rs
src/db/models/: message_state.rs  mod.rs
src/postgres/: schema.rs
